# nutri-term-cli

./: .gitignore  README.md  profile.json  pyproject.toml
.github/workflows/: ci.yml
data/: foods.json
src/nutri-term/: main.py
src/nutri_term/: calculator.py  food_database.py  macros.py  main.py  user_profile.py
tests/: test_calculator.py  test_macros.py  test_user_profile.py
